welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	if (Math.abs(100 - n) = 10) {
                 ^